fix: change overflow property to visible

--- a/src/app/components/beer-filters/beer-filters.component.scss
+++ b/src/app/components/beer-filters/beer-filters.component.scss
@@ -40,6 +40,6 @@
   &-open {
     max-height: 350px;
     padding-bottom: 1rem;
-    overflow: show;
+    overflow: visible;
   }
 }
